# bouquets_generator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  output.txt  pyproject.toml  pytest.ini
bouquets_generator/: __init__.py  console.py  structs.py
tests/: sample.txt  sample_simple.txt  test_integration.py
